--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,14 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
- @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap');
 
 
-body{
-     background-color: #F8F5F2; /* Paper color */
+body {
+     background-color: #F8F5F2;
+     /* Paper color */
      background-image: url('data:image/svg+xml,%3Csvg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"%3E%3Cg fill="none" fill-rule="evenodd"%3E%3Cg fill="%23d4d0c9" fill-opacity="0.3"%3E%3Cpath d="M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z"/%3E%3C/g%3E%3C/g%3E%3C/svg%3E');
 }
 
-.font-display { font-family: 'Kalam', cursive; }
+.font-display {
+     font-family: 'Kalam', cursive;
+}
 
-.font-body { font-family: 'Roboto Slab', serif; }
+.font-body {
+     font-family: 'Roboto Slab', serif;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+     display: none;
+}
